--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=production bun run app.js",
-    "dev": "cross-env NODE_ENV=development bun run --hot app.js"
+    "start": "cross-env NODE_ENV=production bun app",
+    "dev": "cross-env NODE_ENV=development bun run --hot app"
   },
   "repository": {
     "type": "git",
